--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/escapeContato
-spring.datasource.username=root
-spring.datasource.password=Ellael00!
+spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net:3306/heroku_ce1c01c3d944637
+spring.datasource.username=b83001a942cbd4
+spring.datasource.password=25f6341f
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
